--- a/app/src/main/res/layout/activity_chapter.xml
+++ b/app/src/main/res/layout/activity_chapter.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".mvp.chapter.activtiy.ChapterActivity">
+    tools:context=".mvp.chapter.activity.ChapterActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appBar"
